--- a/MobileApp/app/src/main/res/layout/activity_load__logo.xml
+++ b/MobileApp/app/src/main/res/layout/activity_load__logo.xml
@@ -7,16 +7,8 @@
     tools:context=".Load_Logo">
 
     <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="55dp"
-        android:layout_marginTop="165dp"
-        android:layout_marginEnd="56dp"
-        android:layout_marginBottom="266dp"
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:srcCompat="@drawable/logo" />
 </RelativeLayout>
