--- a/MobileApp/app/src/main/res/layout/activity_login__restaurante.xml
+++ b/MobileApp/app/src/main/res/layout/activity_login__restaurante.xml
@@ -9,7 +9,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".ui.login.Login_Restaurante">
+    tools:context=".ui.login.">
 
     <EditText
         android:id="@+id/username"
@@ -27,45 +27,59 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="74dp"
-        android:layout_marginEnd="24dp"
-        android:background="@drawable/password"
-        android:backgroundTint="#D1D0CD"
-        android:hint="     Password"
-        android:imeActionLabel="@string/action_sign_in_short"
-        android:imeOptions="actionDone"
-        android:inputType="textPassword"
-        android:selectAllOnFocus="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/username" />
+   <EditText
+       android:id="@+id/password"
+       android:layout_width="0dp"
+       android:layout_height="50dp"
+       android:layout_marginStart="24dp"
+       android:layout_marginTop="74dp"
+       android:layout_marginEnd="24dp"
+       android:background="@drawable/password"
+       android:backgroundTint="#D1D0CD"
+       android:hint="     Senha"
+       android:imeActionLabel="@string/action_sign_in_short"
+       android:imeOptions="actionDone"
+       android:inputType="textPassword"
+       android:selectAllOnFocus="true"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintTop_toTopOf="@+id/username" />
 
-    <Button
-        android:id="@+id/login"
-        android:layout_width="162dp"
-        android:layout_height="53dp"
-        android:layout_gravity="start"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="48dp"
-        android:layout_marginBottom="64dp"
-        android:background="@drawable/button"
-        android:backgroundTint="#FFC107"
-        android:enabled="false"
-        android:text="login"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password"
-        app:layout_constraintVertical_bias="0.554" />
+   <Button
+       android:id="@+id/login"
+       android:layout_width="162dp"
+       android:layout_height="53dp"
+       android:layout_gravity="start"
+       android:layout_marginTop="16dp"
+       android:layout_marginEnd="192dp"
+       android:layout_marginBottom="64dp"
+       android:background="@drawable/button"
+       android:backgroundTint="#FDD60E"
+       android:enabled="false"
+       android:text="login"
+       android:textColor="#ffff99"
+       android:textColorHint="#ffffff"
+       app:layout_constraintBottom_toBottomOf="parent"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintTop_toBottomOf="@+id/password"
+       app:layout_constraintVertical_bias="0.204" />
 
-    <ProgressBar
+   <TextView
+       android:id="@+id/textView3"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:text="Precisa de ajuda?"
+       android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+       android:textColor="#FDD60E"
+       android:textSize="16sp"
+       app:layout_constraintBottom_toBottomOf="parent"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintHorizontal_bias="0.524"
+       app:layout_constraintStart_toEndOf="@+id/login"
+       app:layout_constraintTop_toBottomOf="@+id/password"
+       app:layout_constraintVertical_bias="0.232" />
+
+   <ProgressBar
         android:id="@+id/loading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -89,10 +103,20 @@
         android:fontFamily="@font/anton"
         android:text="BEM VINDO"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textsize="18sp"
+        android:textSize="36sp"
         app:layout_constraintBottom_toTopOf="@+id/username"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.738" />
+        app:layout_constraintVertical_bias="0.684" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="172dp"
+        android:layout_height="304dp"
+        android:src="@drawable/logo"
+        tools:layout_editor_absoluteX="110dp"
+        tools:layout_editor_absoluteY="-71dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
