--- a/MobileApp/app/src/main/res/layout/activity_login__restaurante.xml
+++ b/MobileApp/app/src/main/res/layout/activity_login__restaurante.xml
@@ -45,41 +45,41 @@
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/username" />
 
-   <Button
-       android:id="@+id/login"
-       android:layout_width="162dp"
-       android:layout_height="53dp"
-       android:layout_gravity="start"
-       android:layout_marginTop="16dp"
-       android:layout_marginEnd="192dp"
-       android:layout_marginBottom="64dp"
-       android:background="@drawable/button"
-       android:backgroundTint="#FDD60E"
-       android:enabled="false"
-       android:text="login"
-       android:textColor="#ffff99"
-       android:textColorHint="#ffffff"
-       app:layout_constraintBottom_toBottomOf="parent"
-       app:layout_constraintEnd_toEndOf="parent"
-       app:layout_constraintTop_toBottomOf="@+id/password"
-       app:layout_constraintVertical_bias="0.204" />
+    <Button
+        android:id="@+id/login"
+        android:layout_width="162dp"
+        android:layout_height="53dp"
+        android:layout_gravity="start"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="192dp"
+        android:layout_marginBottom="64dp"
+        android:background="@drawable/button"
+        android:backgroundTint="#F3D548"
+        android:enabled="false"
+        android:text="login"
+        android:textColor="#ffff99"
+        android:textColorHint="#ffffff"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/password"
+        app:layout_constraintVertical_bias="0.204" />
 
-   <TextView
-       android:id="@+id/textView3"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:text="Precisa de ajuda?"
-       android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-       android:textColor="#FDD60E"
-       android:textSize="16sp"
-       app:layout_constraintBottom_toBottomOf="parent"
-       app:layout_constraintEnd_toEndOf="parent"
-       app:layout_constraintHorizontal_bias="0.524"
-       app:layout_constraintStart_toEndOf="@+id/login"
-       app:layout_constraintTop_toBottomOf="@+id/password"
-       app:layout_constraintVertical_bias="0.232" />
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Precisa de ajuda?"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="#F3D548"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.414"
+        app:layout_constraintStart_toEndOf="@+id/login"
+        app:layout_constraintTop_toBottomOf="@+id/password"
+        app:layout_constraintVertical_bias="0.322" />
 
-   <ProgressBar
+    <ProgressBar
         android:id="@+id/loading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -106,17 +106,21 @@
         android:textSize="36sp"
         app:layout_constraintBottom_toTopOf="@+id/username"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.155"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.684" />
+        app:layout_constraintVertical_bias="0.676" />
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="172dp"
-        android:layout_height="304dp"
-        android:src="@drawable/logo"
-        tools:layout_editor_absoluteX="110dp"
-        tools:layout_editor_absoluteY="-71dp" />
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Criar conta"
+        android:textSize="16sp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="#F3D548"
+        tools:layout_editor_absoluteX="240dp"
+        tools:layout_editor_absoluteY="487dp"
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
