--- a/MobileApp/app/src/main/res/layout/nav_header_main.xml
+++ b/MobileApp/app/src/main/res/layout/nav_header_main.xml
@@ -15,8 +15,8 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="95dp"
+        android:layout_width="231dp"
+        android:layout_height="80dp"
         app:srcCompat="@drawable/logo_name" />
 
     <TextView
