--- a/MobileApp/app/src/main/res/values-v21/styles.xml
+++ b/MobileApp/app/src/main/res/values-v21/styles.xml
@@ -1,8 +1,7 @@
 <resources>
 
-    <style name="AppTheme.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        setStatusBar
+        <item name="android:statusBarColor">#000000</item>
     </style>
 </resources>
