--- a/MobileApp/app/src/main/res/layout/activity_cadastro.xml
+++ b/MobileApp/app/src/main/res/layout/activity_cadastro.xml
@@ -23,12 +23,13 @@
         app:layout_constraintVertical_bias="0.116" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btnCadastro"
         android:layout_width="200dp"
         android:layout_height="53dp"
         android:background="@drawable/proximo"
         android:backgroundTint="#F3D548"
         android:text="proximo"
+        android:onClick="irParaCadastro2"
         android:textColor="#ffff99"
         android:textColorHint="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
