--- a/MobileApp/app/src/main/res/layout/activity_login__restaurante.xml
+++ b/MobileApp/app/src/main/res/layout/activity_login__restaurante.xml
@@ -9,15 +9,36 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".ui.login.">
+    tools:context=".login">
+
+    <Button
+        android:id="@+id/btnCadastro2"
+        android:layout_width="162dp"
+        android:layout_height="53dp"
+        android:layout_gravity="start"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="192dp"
+        android:layout_marginBottom="64dp"
+        android:background="@drawable/proximo"
+        android:backgroundTint="#F3D548"
+        android:onClick="irParaMenu"
+        android:text="Login"
+        android:textColor="#ffff99"
+        android:textColorHint="#ffffff"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/password"
+        app:layout_constraintVertical_bias="0.183" />
 
     <EditText
         android:id="@+id/username"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="316dp"
         android:layout_marginEnd="24dp"
+        android:layout_marginTop="316dp"
         android:background="@drawable/email"
         android:backgroundTint="#D1D0CD"
         android:hint="     Email"
@@ -43,41 +64,21 @@
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
-       app:layout_constraintTop_toTopOf="@+id/username" />
-
-    <Button
-        android:id="@+id/login"
-        android:layout_width="162dp"
-        android:layout_height="53dp"
-        android:layout_gravity="start"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="192dp"
-        android:layout_marginBottom="64dp"
-        android:background="@drawable/button"
-        android:backgroundTint="#F3D548"
-        android:enabled="false"
-        android:text="login"
-        android:textColor="#ffff99"
-        android:textColorHint="#ffffff"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password"
-        app:layout_constraintVertical_bias="0.204" />
+       app:layout_constraintTop_toTopOf="@+id/username"/>
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="40dp"
         android:text="Precisa de ajuda?"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="#F3D548"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.414"
-        app:layout_constraintStart_toEndOf="@+id/login"
         app:layout_constraintTop_toBottomOf="@+id/password"
-        app:layout_constraintVertical_bias="0.322" />
+        app:layout_constraintVertical_bias="0.307" />
 
     <ProgressBar
         android:id="@+id/loading"
@@ -106,21 +107,25 @@
         android:textSize="36sp"
         app:layout_constraintBottom_toTopOf="@+id/username"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.155"
+        app:layout_constraintHorizontal_bias="0.108"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.676" />
+        app:layout_constraintVertical_bias="0.332" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="64dp"
+        android:onClick="irParaCadastro1"
         android:text="Criar conta"
-        android:textSize="16sp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="#F3D548"
-        tools:layout_editor_absoluteX="240dp"
-        tools:layout_editor_absoluteY="487dp"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/password"
+        app:layout_constraintVertical_bias="0.75"
         tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
