--- a/MobileApp/app/src/main/res/layout/activity_restaurante_cadastro.xml
+++ b/MobileApp/app/src/main/res/layout/activity_restaurante_cadastro.xml
@@ -73,9 +73,9 @@
         android:id="@+id/button"
         android:layout_width="200dp"
         android:layout_height="53dp"
-        android:layout_marginBottom="188dp"
         android:background="@drawable/proximo"
         android:backgroundTint="#F3D548"
+        android:onClick="irParaMenu"
         android:text="registrar cardápio"
         android:textColor="#ffff99"
         android:textColorHint="#ffffff"
@@ -83,7 +83,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.879" />
 
     <TextView
         android:id="@+id/textView10"
