--- a/MobileApp/app/src/main/res/layout/activity_login__restaurante.xml
+++ b/MobileApp/app/src/main/res/layout/activity_login__restaurante.xml
@@ -94,12 +94,14 @@
         app:layout_constraintEnd_toEndOf="@+id/password"
         app:layout_constraintStart_toStartOf="@+id/password"
         app:layout_constraintTop_toTopOf="parent"
+        android:orientation="vertical"
         app:layout_constraintVertical_bias="0.3" />
 
     <EditText
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="#00FFFFFF"
         android:backgroundTint="#FFFFFF"
         android:fontFamily="@font/anton"
         android:text="BEM VINDO"
