--- a/MobileApp/app/src/main/res/layout/activity_restaurante_cadastro.xml
+++ b/MobileApp/app/src/main/res/layout/activity_restaurante_cadastro.xml
@@ -4,13 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".restaurante_cadastro">
+
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
+        android:background="#00FFFFFF"
         android:backgroundTint="#FFFFFF"
         android:fontFamily="@font/anton"
         android:text="CADASTRO DO RESTAURANTE"
@@ -23,7 +26,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.122" />
 
-    <TextView
+    <EditText
         android:id="@+id/textView8"
         android:layout_width="0dp"
         android:layout_height="50dp"
@@ -46,7 +49,7 @@
         app:layout_constraintVertical_bias="0.0"
         tools:ignore="DuplicateIds,NotSibling" />
 
-    <TextView
+    <EditText
         android:id="@+id/textView9"
         android:layout_width="0dp"
         android:layout_height="50dp"
@@ -86,7 +89,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.879" />
 
-    <TextView
+    <EditText
         android:id="@+id/textView10"
         android:layout_width="0dp"
         android:layout_height="50dp"
