--- a/MobileApp/app/src/main/res/layout/activity_cadastro.xml
+++ b/MobileApp/app/src/main/res/layout/activity_cadastro.xml
@@ -29,22 +29,24 @@
         android:layout_height="53dp"
         android:background="@drawable/proximo"
         android:backgroundTint="#F3D548"
-        android:text="proximo"
         android:onClick="irParaCadastro2"
+        android:text="proximo"
         android:textColor="#ffff99"
         android:textColorHint="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password" />
+        app:layout_constraintTop_toBottomOf="@+id/password"
+        app:layout_constraintVertical_bias="0.648" />
 
     <EditText
         android:id="@+id/textView7"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="32dp"
         android:background="@drawable/email"
         android:backgroundTint="#D1D0CD"
         android:gravity="center_vertical"
@@ -57,7 +59,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintVertical_bias="0.205"
         tools:ignore="DuplicateIds,NotSibling" />
 
     <EditText
@@ -85,7 +87,7 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="144dp"
+        android:layout_marginTop="200dp"
         android:layout_marginEnd="24dp"
         android:background="@drawable/email"
         android:backgroundTint="#D1D0CD"
@@ -95,7 +97,7 @@
         android:selectAllOnFocus="true"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
@@ -125,12 +127,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="144dp"
+        android:layout_marginTop="128dp"
         android:layout_marginEnd="175dp"
         android:text="Data de Nascimento"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.447"
+        app:layout_constraintHorizontal_bias="0.216"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
         tools:ignore="MissingConstraints" />
