Iniciado a logica para adicionar cardapio

--- a/MobileApp/app/src/main/res/layout/fragment_home.xml
+++ b/MobileApp/app/src/main/res/layout/fragment_home.xml
@@ -21,4 +21,47 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/list_pratop"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="1dp"
+        tools:ignore="MissingConstraints" />
+
+    <ListView
+        android:id="@+id/list_salada"
+        android:layout_width="300dp"
+        android:layout_height="150dp"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="55dp"
+        tools:layout_editor_absoluteY="29dp" />
+
+    <ListView
+        android:id="@+id/list_beboda"
+        android:layout_width="300dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="28dp"
+        app:layout_constraintTop_toBottomOf="@+id/list_salada"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="55dp" />
+
+    <ListView
+        android:id="@+id/list_sobremesa"
+        android:layout_width="300dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="36dp"
+        app:layout_constraintTop_toTopOf="@+id/text_home"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="55dp" />
+
+    <ListView
+        android:id="@+id/list_acompanha"
+        android:layout_width="300dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintTop_toBottomOf="@+id/list_sobremesa"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="55dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
