--- a/MobileApp/app/src/main/res/layout/activity_pedidos.xml
+++ b/MobileApp/app/src/main/res/layout/activity_pedidos.xml
@@ -10,52 +10,60 @@
         android:id="@+id/btnBluetoothConect"
         android:layout_width="132dp"
         android:layout_height="53dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="28dp"
         android:background="@drawable/proximo"
         android:backgroundTint="#F3D548"
-        android:gravity="center_horizontal"
-        android:paddingTop="20dp"
+        android:gravity="center"
         android:text="Conectar"
         android:textColor="@android:color/background_light"
         android:textSize="11sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/btnLed2"
-        android:layout_width="132dp"
-        android:layout_height="53dp"
-        android:layout_marginBottom="52dp"
-        android:background="@drawable/proximo"
-        android:backgroundTint="#F3D548"
-        android:gravity="center_horizontal"
-        android:paddingTop="20dp"
-        android:text="Enviar pedido"
-        android:textColor="@android:color/background_light"
-        android:textSize="11sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <ListView
-        android:id="@+id/pedidos"
-        android:layout_width="match_parent"
+    <ScrollView
+        android:id="@+id/scrollView4"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnBluetoothConect">
 
-    </ListView>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
-    <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="@+id/btnBluetoothConect"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/btnBluetoothConect"
-        app:layout_constraintTop_toTopOf="@+id/btnBluetoothConect" />
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/list_pedidos"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="10dp"
+                android:paddingEnd="10dp"
+                app:layout_constraintBottom_toTopOf="@+id/btnLed2"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.084"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/btnLed2"
+                android:layout_width="132dp"
+                android:layout_height="53dp"
+                android:background="@drawable/proximo"
+                android:backgroundTint="#F3D548"
+                android:gravity="center_horizontal"
+                android:paddingTop="20dp"
+                android:text="Enviar pedido"
+                android:textColor="@android:color/background_light"
+                android:textSize="11sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
