--- a/MobileApp/app/src/main/res/layout/row.xml
+++ b/MobileApp/app/src/main/res/layout/row.xml
@@ -15,24 +15,27 @@
 
     <TextView
         android:id="@+id/nomePrato"
-        android:layout_width="250dp"
+        android:layout_width="220dp"
         android:layout_height="wrap_content"
-        android:paddingEnd="50dp"
+        android:paddingEnd="10dp"
         android:paddingRight="20dp"
+        android:layout_gravity="center_vertical"
         android:textSize="28sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/precoPrato"
-        android:layout_width="150dp"
+        android:layout_width="170dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
         android:paddingEnd="5dp"
         android:textSize="28sp"
         app:layout_constraintBottom_toBottomOf="@+id/nomePrato"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/nomePrato"
-        app:layout_constraintTop_toTopOf="@+id/nomePrato" />
+        app:layout_constraintTop_toTopOf="@+id/nomePrato"
+        android:paddingRight="10dp"/>
 
 
 </LinearLayout>
